# SDR-

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  make_macos_bundle.sh  make_windows_package.ps1
core/backends/glfw/: backend.cpp
core/src/: core.cpp  version.h
core/src/dsp/audio/: volume.h
core/src/gui/: icons.cpp  icons.h  main_window.cpp  main_window.h
core/src/gui/widgets/: file_select.cpp  frequency_select.cpp  frequency_select.h  waterfall.cpp
core/src/signal_path/: sink.cpp  sink.h
misc_modules/recorder/src/: main.cpp
source_modules/ArcaleServer_source/: CMakeLists.txt
source_modules/ArcaleServer_source/src/: ArcaleServer.h  main.cpp
source_modules/file_source/src/: wavreader.h
source_modules/harogic_source/src/: main.cpp
source_modules/network_source/src/: main.cpp
